--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+build 6 (2/19/13):
+- Modified initialization lists to be more consistent with member variables.
++ Disallowed copy constructors in certain classes.
+
 build 5 (2/18/13):
 - Modified some class methods to be bitwise constant
 + Completed flip aces feature (can flip aces from 1 to 11 at will prior to hand total and win/lose conditions evaluation)
