--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,19 @@
+build 11 (4/9/13)
+First public build after a lengthy, self-imposed, hiatus.
+
++ Fixed split hand wallet bet reconstitution.
+- Finished putting implementations back into .cpp files instead of header files.
++ Added instructions menu and instructions display for new users.
++ Console window is now resizeable.
++ Console window size is set to paint at 700x750 pixels.
++ Prevented splitting a hand if not enough money is available to cover the bet for an additional hand.
+
+build 10 (2/28/13)
+- Refactored code to separate method declarations from definitions
+
+build 9 (2/26/13) - (2/27/13) internal build
++ Added split hand feature; refactoring
+
 build 8 (2/26/13)
 - Code tweaks to the shuffling algorithm (Deck.cpp), ace revert method (Game.h & Game.cpp).
 + Created a new private method for the ace revert action (Game::revertAces).
