--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+build 14 (4/11/13)
+- Code style tweaks
+- Removed display of insurance bet when no insurance bet was possible
++ Fixed a display issue with split hand evaluation (further testing required on this issue)
++ Added clear screen breaks to clarify the game flow - The game screen should clear after each turn
+
 build 13 (4/10/13)
 + Fixed Instruction text typos
 + Added insurance feature
