--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+build 15 (4/12/13)
++ Added Windows installers to the project.
+
 build 14 (4/11/13)
 - Code style tweaks
 - Removed display of insurance bet when no insurance bet was possible
