--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+build 16 (4/12/13)
++ Added an Options menu to the list of main menu choices.
+
 build 15 (4/12/13)
 + Added Windows installers to the project.
 
